--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
  </head>
+
     <body>
-            <h1>Alurabook</h1>
+      <header class="cabeçalho">
+         <div class="container">
+         <span class="cabeçalho menu-hanburguer"></span>
+         <img src="img/Logo.svg" alt="Logo da Alurabooks">
+         </div>
+         <div class="container">
+         <a href="#"><img scr="img/Favorito.svg"alt="Menu favoritos"></a>
+         <a href="#"><img scr="img/Compras.svg"alt="Carrinho de compras"></a>
+         <a href="#"><img scr="img/Usuário.svg" alt="Meu perfil"></a>
+         </div>
+      </header>
     </body>
 
 </html>
